objects/UNITY_Push_Notification_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting defines a query and what fields to display per Push Notification type.</description>
    <fields>
        <fullName>BG_Color__c</fullName>
        <label>BG Color</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fields_Order__c</fullName>
        <description>The order in which to display the fields on the notification.</description>
        <label>Fields Order</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>The object this refers to</description>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <description>The Query to be performed in order to get the desired info per notification. All the way up to &apos;FROM Objert_Api__c&apos;. No WHERE statement included.</description>
        <inlineHelpText>The Query to be performed in order to get the desired info per notification.</inlineHelpText>
        <label>Query</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Push Notification Setting</label>
</CustomObject>